feat: implement JWT-based authentication and authorization with Spring Security for user management.