@@ -30,7 +30,8 @@ import static org.springframework.security.test.web.servlet.request.SecurityMock
 
 @WebMvcTest(RestaurantController.class)
 @AutoConfigureMockMvc
-@Import(dev.kaisten.RestaurantAPI.config.SecurityConfig.class)
+@Import({ dev.kaisten.RestaurantAPI.config.SecurityConfig.class,
+        dev.kaisten.RestaurantAPI.config.JwtAuthenticationFilter.class })
 public class RestaurantControllerTest {
 
     @Autowired
@@ -42,12 +43,18 @@ public class RestaurantControllerTest {
     @MockitoBean
     private UserDetailsService userDetailsService;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @MockitoBean
+    private dev.kaisten.RestaurantAPI.config.JwtService jwtService;
+
+    @MockitoBean
+    private org.springframework.security.authentication.AuthenticationProvider authenticationProvider;
+
+    private ObjectMapper objectMapper = new ObjectMapper();
 
     @Test
     public void getAllRestaurants_shouldReturnRestaurants() throws Exception {
-        RestaurantResponseDTO restaurant = new RestaurantResponseDTO(1L, "Great Food", "Main St 123", Collections.emptyList(), Collections.emptyList());
+        RestaurantResponseDTO restaurant = new RestaurantResponseDTO(1L, "Great Food", "Main St 123",
+                Collections.emptyList(), Collections.emptyList());
         Page<RestaurantResponseDTO> page = new PageImpl<>(Collections.singletonList(restaurant));
 
         when(restaurantService.findAll(any(Pageable.class))).thenReturn(page);
@@ -60,29 +67,32 @@ public class RestaurantControllerTest {
     @Test
     public void createRestaurant_whenRestaurant_shouldCreateRestaurant() throws Exception {
         RestaurantRequestDTO request = new RestaurantRequestDTO("New Restaurant", "Address", List.of(1L), List.of(1L));
-        RestaurantResponseDTO response = new RestaurantResponseDTO(1L, "New Restaurant", "Address", Collections.emptyList(), Collections.emptyList());
+        RestaurantResponseDTO response = new RestaurantResponseDTO(1L, "New Restaurant", "Address",
+                Collections.emptyList(), Collections.emptyList());
 
         when(restaurantService.create(any(RestaurantRequestDTO.class))).thenReturn(response);
 
         mockMvc.perform(MockMvcRequestBuilders.post("/api/v1/restaurants")
-                        .with(user("admin").roles("RESTAURANT"))
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                .with(user("admin").roles("RESTAURANT"))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(request)))
                 .andExpect(MockMvcResultMatchers.status().isCreated())
                 .andExpect(MockMvcResultMatchers.jsonPath("$.name").value("New Restaurant"));
     }
 
     @Test
     public void updateRestaurant_whenRestaurant_shouldUpdateRestaurant() throws Exception {
-        RestaurantRequestDTO request = new RestaurantRequestDTO("Updated Restaurant", "Address", List.of(1L), List.of(1L));
-        RestaurantResponseDTO response = new RestaurantResponseDTO(1L, "Updated Restaurant", "Address", Collections.emptyList(), Collections.emptyList());
+        RestaurantRequestDTO request = new RestaurantRequestDTO("Updated Restaurant", "Address", List.of(1L),
+                List.of(1L));
+        RestaurantResponseDTO response = new RestaurantResponseDTO(1L, "Updated Restaurant", "Address",
+                Collections.emptyList(), Collections.emptyList());
 
         when(restaurantService.update(eq(1L), any(RestaurantRequestDTO.class))).thenReturn(response);
 
         mockMvc.perform(MockMvcRequestBuilders.put("/api/v1/restaurants/1")
-                        .with(user("admin").roles("RESTAURANT"))
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                .with(user("admin").roles("RESTAURANT"))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(request)))
                 .andExpect(MockMvcResultMatchers.status().isOk())
                 .andExpect(MockMvcResultMatchers.jsonPath("$.name").value("Updated Restaurant"));
     }
@@ -91,7 +101,7 @@ public class RestaurantControllerTest {
     public void deleteRestaurant_whenRestaurant_shouldDeleteRestaurant() throws Exception {
         doNothing().when(restaurantService).delete(1L);
         mockMvc.perform(MockMvcRequestBuilders.delete("/api/v1/restaurants/1")
-                        .with(user("admin").roles("RESTAURANT")))
+                .with(user("admin").roles("RESTAURANT")))
                 .andExpect(MockMvcResultMatchers.status().isNoContent());
     }
 }
